[metadata]
name = deephaven-plugin-ui
description = Deephaven UI Plugin
long_description = file: README.md
long_description_content_type = text/markdown
version = attr:deephaven.ui.__version__
url = https://github.com/deephaven/deephaven-plugin-ui
project_urls =
    Source Code = https://github.com/deephaven/deephaven-plugin-ui
    Bug Tracker = https://github.com/deephaven/deephaven-plugin-ui/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Environment :: Plugins
    Topic :: Scientific/Engineering :: Visualization
    Development Status :: 3 - Alpha
keywords = deephaven, plugin, graph
author = Mike Bender
author_email = mikebender@deephaven.io
platforms = any

[options]
package_dir=
    =src
packages=find_namespace:
install_requires =
    deephaven-plugin>=0.5.0
include_package_data = True

[options.packages.find]
where=src

[options.entry_points]
deephaven.plugin =
    registration_cls = deephaven.ui:UIRegistration
